tests/NormalTests/paczka1/fuzzy1/38254147.err
Error in line 1: Ykt A414 60,8
Error in line 6: AkM4 A165 14,7
Error in line 11: Ykt A576 65,2
Error in line 29: bHUKtA77 A576 -1,4
Error in line 30: AkM4 A414 96,9
